--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
     "core-js": "^2.5.4",
+    "ngx-onsenui": "^4.2.2",
+    "onsenui": "^2.10.5",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
