--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
@@ -23,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.6",
     "ngx-onsenui": "^4.2.2",
     "onsenui": "^2.10.5",
     "rxjs": "~6.2.0",
